--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "webpack --watch",
     "build": "webpack"
   },
-  "keywords": ["JavaScript", "Webpack", "TOP"],
+  "keywords": [
+    "JavaScript",
+    "Webpack",
+    "TOP"
+  ],
   "author": "Johan Hellberg",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
