--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "restaurant-page",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack --watch",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --watch",
     "build": "webpack"
   },
   "keywords": [
@@ -20,6 +22,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
